<resources>
    <string name="legend">
        Поиски древних сокровищ всегда интересовали авантюристов всех мастей, с тех самых пор,как эти сокровища укрывали - с глубокой древности. Путешественник отправляется на остров для поиска древнего клада. Помоги путешественнику расшифровать карту и найти сокровища. Двигайся по карте острова, решая задачи по Kotlin, ищи подсказки и доберись первым до сокровищ.
    </string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="next">Next</string>
    <string name="achievements_count">Achievements: %1$s/10</string>
    <string name="exercise_number">Exercise %1$s</string>
    <string name="check">Check</string>
    <string name="show_desc">Show description</string>

    <string name="menu">Menu</string>
    <string name="map">Map</string>
    <string name="achievements">Achievements</string>
    <string name="awards">Awards</string>
    <string name="account">Account</string>
    <string name="code">Code</string>
    <string name="user">User</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="kotme" translatable="false">KOTme</string>
    <string name="play">Play</string>
    <string name="legend_title">Legend</string>
    <string name="message8">Message:</string>
    <string name="outputFromConsole8">Console log:</string>
    <string name="back">Back</string>
    <string name="accept">Accept</string>
    <string name="retypePassword">Retype password</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="excelentWork">Excelent Work!</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>

    <string name="done">Выполнено</string>
    <string name="not_checked">Не проверено</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="compile_errors">Ошибки компиляции</string>
    <string name="incorrect_result">Не верный результат</string>
    <string name="runtime_errors">Ошибки выполнения кода</string>
</resources>