<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wooden_box"
    android:paddingLeft="40dp"
    android:paddingTop="60dp"
    android:paddingRight="40dp"
    android:paddingBottom="60dp"
    android:orientation="vertical"
    tools:context=".fragment.UserProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ViewSwitcher
                android:id="@+id/name_switcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name_view"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text=""
                    android:textSize="34sp"
                    tools:text="@string/name" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textSize="24sp" />
            </ViewSwitcher>

            <TextView
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                tools:text="Progress" />

            <TextView
                android:id="@+id/achievements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                tools:text="@string/achievements" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save" />

</LinearLayout>